add new functional to work with tasks
